# bookmarks.nvim

./: .gitignore  LICENSE  README.md  build.lua  install.sh  stylua.toml
lib/: .gitignore
lib/bookmark/: Cargo.toml
lib/bookmark/src/: lib.rs
lua/: bookmarks.lua  config.lua  event.lua  list.lua  persistence.lua
lua/bookmarks/: config.lua  data.lua  event.lua  fix.lua  float.lua  helper.lua  install.lua  list.lua  marks.lua  split.lua  utf8.lua  window.lua
lua/telescope/_extensions/: bookmarks.lua
