[package]
edition = "2021"
name = "bookmark"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
md5 = "0.7.0"
mlua = {version = "0.8.9", features = ["lua51", "vendored", "module", "serialize", "serde"]}
serde = {version = "1.0.175", features = ["derive"]}
serde_json = "1.0.103"
